Changed compiler settings

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -215,6 +215,33 @@ ___________________________________________________________________________
 
 ___________________________________________________________________________
 
+--------------------------------- INSTEON ---------------------------------
+___________________________________________________________________________
+
+#################################
+############## Hub ##############
+#################################
+
+## The device family this interface is for
+#[INSTEON]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-Hub
+
+## Options: insteonhubx10
+#deviceType = insteonhubx10
+
+## IP address of your hub
+#host = 192.168.178.100
+
+## Port number your hub listens on. Normally 9761.
+#port = 9761
+
+## Should be "100"
+#responseDelay = 100
+
+___________________________________________________________________________
+
 ---------------------------------- MAX!  ----------------------------------
 ___________________________________________________________________________
 
