Static analysis fixes

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -151,6 +151,11 @@ responseDelay = 95
 ## "18" for COC. "22" for CCD. Empty for CSM.
 #gpio2 = 18
 
+## Default: stackPosition = 0 (= no stacking)
+## Set stackPosition if you use the SCC and stacked multiple devices.
+## Set stackPosition to "1" for the lowest device, to "2" for the device
+## above that and so on.
+# stackPosition = 0
 ___________________________________________________________________________
 
 ----------------------------- HomeMatic Wired -----------------------------
