Philips hue config files

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -271,3 +271,28 @@ ___________________________________________________________________________
 
 ## Should be "40" for MAX!
 #responseDelay = 40
+
+___________________________________________________________________________
+
+------------------------------- Philips hue -------------------------------
+___________________________________________________________________________
+
+#################################
+############ Bridge  ############
+#################################
+
+## The device family this interface is for
+#[PhilipsHue]
+
+## Specify an unique id here to identify this device in Homegear
+## This identifier is also used as the bridge user name and "password".
+#id = My-Bridge-1234
+
+## Options: huebridge
+#deviceType = huebridge
+
+## IP address of your bridge
+#host = 192.168.178.100
+
+## Port number your bridge listens on. Normally 80.
+#port = 80
