Philips hue and HomeMatic Wired subconfig bugfix

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -296,3 +296,6 @@ ___________________________________________________________________________
 
 ## Port number your bridge listens on. Normally 80.
 #port = 80
+
+## Should be "100" for Philips hue
+#responseDelay = 100
