RS485 fast sending

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -218,6 +218,10 @@ ___________________________________________________________________________
 ## Set GPIO to this value to enable TX
 #enableTXValue = 1
 
+## !!!EXPERIMENTAL!!!
+## Reduces the time for the bus to become free from between 
+## 210 and 310 ms to between 55 and 75 ms.
+# fastSending = true
 ___________________________________________________________________________
 
 --------------------------------- INSTEON ---------------------------------
