--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -171,14 +171,13 @@ ___________________________________________________________________________
 ## Specify an unique id here to identify this device in Homegear
 #id = My-COC
 
-## Options: rs485
+## Options: rs485, hmwlgw
 #deviceType = rs485
 
 ## Mostly /dev/ttyACM0 or /dev/ttyUSB0
 #device = /dev/ttyUSB0
 
-## Default: responseDelay = 95
-## Should be "13" for serial modules and "20" for USB modules.
+## Should be "13" for serial modules, "20" for USB modules and "8" for HMW-LGW.
 #responseDelay = 20
 
 ## Set to "true" for USB modules
@@ -194,13 +193,12 @@ ___________________________________________________________________________
 ## Specify an unique id here to identify this device in Homegear
 #id = My-RS485
 
-## Options: rs485
+## Options: rs485, hmwlgw
 #deviceType = rs485
 
 #device = /dev/ttyAMA0
 
-## Default: responseDelay = 95
-## Should be "13" for serial modules and "20" for USB modules.
+## Should be "13" for serial modules, "20" for USB modules and "8" for HMW-LGW.
 #responseDelay = 13
 
 ## Set to "true" for USB modules
@@ -219,9 +217,35 @@ ___________________________________________________________________________
 #enableTXValue = 1
 
 ## !!!EXPERIMENTAL!!!
-## Reduces the time for the bus to become free from between 
-## 210 and 310 ms to between 55 and 75 ms.
-# fastSending = true
+## Reduces the time for the bus to become free from about 200 ms 
+## to about 100 ms.
+#fastSending = true
+
+#################################
+########### HMW-LGW  ############
+#################################
+
+## The device family this interface is for
+#[HomeMaticWired]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-HMW-LGW
+
+## Options: rs485, hmwlgw
+#deviceType = hmwlgw
+
+## IP address of your HM-LGW
+#host = 192.168.178.100
+
+## First Port number your HMW-LGW listens on. Normally 1000.
+#port = 1000
+
+## Put the security key printed on your HMW-LGW here
+#lanKey = SecurityKey
+
+## Should be "13" for serial modules, "20" for USB modules and "8" for HMW-LGW.
+#responseDelay = 8
+
 ___________________________________________________________________________
 
 --------------------------------- INSTEON ---------------------------------
