--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -3,9 +3,9 @@ ___________________________________________________________________________
 ---------------------------- HomeMatic BidCoS  ----------------------------
 ___________________________________________________________________________
 
-#################################
-############## CUL ##############
-#################################
+#######################################
+################# CUL #################
+#######################################
 
 # The device family this interface is for
 [HomeMaticBidCoS]
@@ -26,54 +26,9 @@ device = /dev/ttyACM0
 # Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
 responseDelay = 95
 
-#################################
-########## HM-CFG-LAN ###########
-#################################
-
-## The device family this interface is for
-#[HomeMaticBidCoS]
-
-## Specify an unique id here to identify this device in Homegear
-#id = My-HM-CFG-LAN
-
-## When default is set to "true" Homegear will assign this device
-## to new peers.
-#default = true
-
-## Options: cul, cc1100, coc, hmcfglan, hmlgw
-#deviceType = hmcfglan
-
-## IP address of your HM-CFG-LAN
-#host = 192.168.178.100
-
-## Port number your HM-CFG-LAN listens on. Normally 1000.
-#port = 1000
-
-## Put the AES key printed on your HM-CFG-LAN here
-#lanKey = 00112233445566778899AABBCCDDEEFF
-
-## Specify an AES key here to protect your wireless communication
-## !!! IMPORTANT: Never ever lose this key.  That would render your devices useless.
-## To remove the key from your devices, you need to factory reset them
-#rfKey = 00112233445566778899AABBCCDDEEFF
-
-## With each key change currentRFKeyIndex needs to be
-## incremented by 1
-#currentRFKeyIndex = 1
-
-## When you change rfKey, put the old key here. To
-## change the key Homegear needs to know the old and
-## the new one.
-## !!! Do not set oldRFKey when you set rfKey for the first time !!!
-##oldRFKey = 00112233445566778899AABBCCDDEEFF
-
-## Default: responseDelay = 95
-## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
-#responseDelay = 60
-
-#################################
-############ HM-LGW #############
-#################################
+#######################################
+### HomeMatic Wireless LAN Gateway  ###
+#######################################
 
 ## The device family this interface is for
 #[HomeMaticBidCoS]
@@ -119,9 +74,54 @@ responseDelay = 95
 ## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
 #responseDelay = 60
 
-#################################
-######### COC, CSM, CCD #########
-#################################
+#######################################
+############# HM-CFG-LAN  #############
+#######################################
+
+## The device family this interface is for
+#[HomeMaticBidCoS]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-HM-CFG-LAN
+
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
+
+## Options: cul, cc1100, coc, hmcfglan, hmlgw
+#deviceType = hmcfglan
+
+## IP address of your HM-CFG-LAN
+#host = 192.168.178.100
+
+## Port number your HM-CFG-LAN listens on. Normally 1000.
+#port = 1000
+
+## Put the AES key printed on your HM-CFG-LAN here
+#lanKey = 00112233445566778899AABBCCDDEEFF
+
+## Specify an AES key here to protect your wireless communication
+## !!! IMPORTANT: Never ever lose this key.  That would render your devices useless.
+## To remove the key from your devices, you need to factory reset them
+#rfKey = 00112233445566778899AABBCCDDEEFF
+
+## With each key change currentRFKeyIndex needs to be
+## incremented by 1
+#currentRFKeyIndex = 1
+
+## When you change rfKey, put the old key here. To
+## change the key Homegear needs to know the old and
+## the new one.
+## !!! Do not set oldRFKey when you set rfKey for the first time !!!
+##oldRFKey = 00112233445566778899AABBCCDDEEFF
+
+## Default: responseDelay = 95
+## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
+#responseDelay = 60
+
+#######################################
+############ COC, CSM, CCD ############
+#######################################
 
 ## The device family this interface is for
 #[HomeMaticBidCoS]
@@ -156,14 +156,15 @@ responseDelay = 95
 ## Set stackPosition to "1" for the lowest device, to "2" for the device
 ## above that and so on.
 # stackPosition = 0
+
 ___________________________________________________________________________
 
 ----------------------------- HomeMatic Wired -----------------------------
 ___________________________________________________________________________
 
-#################################
-###### RS485 - USB Module  ######
-#################################
+#######################################
+######### RS485 - USB Module  #########
+#######################################
 
 ## The device family this interface is for
 #[HomeMaticWired]
@@ -183,9 +184,9 @@ ___________________________________________________________________________
 ## Set to "true" for USB modules
 #oneWay = true
 
-#################################
-##### RS485 - Serial Module #####
-#################################
+#######################################
+######## RS485 - Serial Module ########
+#######################################
 
 ## The device family this interface is for
 #[HomeMaticWired]
@@ -221,9 +222,9 @@ ___________________________________________________________________________
 ## to about 100 ms.
 #fastSending = true
 
-#################################
-########### HMW-LGW  ############
-#################################
+#######################################
+## HomeMatic Wired RS485 LAN Gateway ##
+#######################################
 
 ## The device family this interface is for
 #[HomeMaticWired]
@@ -234,7 +235,7 @@ ___________________________________________________________________________
 ## Options: rs485, hmwlgw
 #deviceType = hmwlgw
 
-## IP address of your HM-LGW
+## IP address of your HMW-LGW
 #host = 192.168.178.100
 
 ## First Port number your HMW-LGW listens on. Normally 1000.
@@ -251,9 +252,9 @@ ___________________________________________________________________________
 --------------------------------- INSTEON ---------------------------------
 ___________________________________________________________________________
 
-#################################
-############## Hub ##############
-#################################
+#######################################
+########### Insteon Hub X10 ###########
+#######################################
 
 ## The device family this interface is for
 #[INSTEON]
@@ -278,9 +279,9 @@ ___________________________________________________________________________
 ---------------------------------- MAX!  ----------------------------------
 ___________________________________________________________________________
 
-#################################
-############## CUL ##############
-#################################
+#######################################
+################# CUL #################
+#######################################
 
 ## The device family this interface is for
 #[MAX]
@@ -305,9 +306,9 @@ ___________________________________________________________________________
 ------------------------------- Philips hue -------------------------------
 ___________________________________________________________________________
 
-#################################
-############ Bridge  ############
-#################################
+#######################################
+############# Hue Bridge  #############
+#######################################
 
 ## The device family this interface is for
 #[PhilipsHue]
