New physical interface setting "interruptPin".

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -157,6 +157,37 @@ responseDelay = 95
 ## above that and so on.
 # stackPosition = 0
 
+#######################################
+########## TI CC1101 Module  ##########
+#######################################
+
+## The device family this interface is for
+#[HomeMaticBidCoS]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-CC1101
+
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
+
+## Options: cul, cc1100, coc, hmcfglan, hmlgw
+#deviceType = cc1100
+
+#device = /dev/spidev0.0
+
+## Default: responseDelay = 95
+## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
+#responseDelay = 100
+
+## The interrupt pin to use. "0" for GDO0 or "2" for GDO2.
+## You only need to connect one of them. Specify the GPIO
+## you connected the interrupt pin to below.
+#interruptPin = 2
+
+## The GPIO GDO0 or GDO2 is connected to. Specify which GDO to use above.
+#gpio1 = 23
+
 ___________________________________________________________________________
 
 ----------------------------- HomeMatic Wired -----------------------------
@@ -293,13 +324,44 @@ ___________________________________________________________________________
 ## to new peers.
 #default = true
 
-## Options: cul, coc
+## Options: cul, coc, cc1100
 #deviceType = cul
 
 #device = /dev/ttyACM0
 
 ## Should be "40" for MAX!
 #responseDelay = 40
+
+#######################################
+########## TI CC1101 Module  ##########
+#######################################
+
+## The device family this interface is for
+#[MAX]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-MAX-CC1101
+
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
+
+## Options: cul, coc, cc1100
+#deviceType = cc1100
+
+#device = /dev/spidev0.0
+
+## Default: responseDelay = 95
+## Should be "40" for CUL or COC and "45" for TI CC1101.
+#responseDelay = 45
+
+## The interrupt pin to use. "0" for GDO0 or "2" for GDO2.
+## You only need to connect one of them. Specify the GPIO
+## you connected the interrupt pin to below.
+#interruptPin = 2
+
+## The GPIO GDO0 or GDO2 is connected to. Specify which GDO to use above.
+#gpio1 = 23
 
 ___________________________________________________________________________
 
