--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -106,7 +106,7 @@ responseDelay = 95
 #rfKey = 00112233445566778899AABBCCDDEEFF
 
 ## With each key change currentRFKeyIndex needs to be
-## incremented by 1
+## incremented by 1. Default value is 1.
 #currentRFKeyIndex = 1
 
 ## When you change rfKey, put the old key here. To
