--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -55,7 +55,7 @@ responseDelay = 95
 ## Put the security key printed on your HM-LGW here
 #lanKey = SecurityKey
 
-## Specify an AES key here to protect your wireless communication
+## Specify a 16 byte (32 characters) long AES key here to protect your wireless communication
 ## !!! IMPORTANT: Never ever lose this key. That would render your devices useless.
 ## To remove the key from your devices, you need to factory reset them
 #rfKey = 00112233445566778899AABBCCDDEEFF
@@ -64,9 +64,8 @@ responseDelay = 95
 ## incremented by 1
 #currentRFKeyIndex = 1
 
-## When you change rfKey, put the old key here. To
-## change the key Homegear needs to know the old and
-## the new one.
+## When you change rfKey, put the old key here. To change the key Homegear needs to know the
+## old and the new one.
 ## !!! Do not set oldRFKey when you set rfKey for the first time !!!
 ##oldRFKey = 00112233445566778899AABBCCDDEEFF
 
@@ -100,7 +99,7 @@ responseDelay = 95
 ## Put the AES key printed on your HM-CFG-LAN here
 #lanKey = 00112233445566778899AABBCCDDEEFF
 
-## Specify an AES key here to protect your wireless communication
+## Specify a 16 byte (32 characters) long AES key here to protect your wireless communication
 ## !!! IMPORTANT: Never ever lose this key.  That would render your devices useless.
 ## To remove the key from your devices, you need to factory reset them
 #rfKey = 00112233445566778899AABBCCDDEEFF
