IP-Symcon for Linux fix

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -119,7 +119,7 @@ responseDelay = 95
 #responseDelay = 60
 
 #######################################
-############ COC, CSM, CCD ############
+######### COC, SCC, CSM, CCD  #########
 #######################################
 
 ## The device family this interface is for
@@ -133,7 +133,7 @@ responseDelay = 95
 #default = true
 
 ## Options: cul, cc1100, coc, hmcfglan, hmlgw
-## Also use "coc" for CCD and CSM
+## Also use "coc" for SCC, CCD and CSM
 #deviceType = coc
 
 #device = /dev/ttyAMA0
@@ -143,11 +143,11 @@ responseDelay = 95
 #responseDelay = 95
 
 ## Default: gpio1 = 0
-## "17" for COC and CCD. Empty for CSM.
+## "17" for COC, SCC and CCD. Empty for CSM.
 #gpio1 = 17
 
 ## Default: gpio2 = 0
-## "18" for COC. "22" for CCD. Empty for CSM.
+## "18" for COC and SCC. "22" for CCD. Empty for CSM.
 #gpio2 = 18
 
 ## Default: stackPosition = 0 (= no stacking)
