CUNO support (still with timing problems to fix)

--- a/Miscellaneous/physicalinterfaces.conf
+++ b/Miscellaneous/physicalinterfaces.conf
@@ -17,7 +17,7 @@ id = My-CUL
 # to new peers.
 default = true
 
-# Options: cul, cc1100, coc, hmcfglan, hmlgw
+# Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
 deviceType = cul
 
 device = /dev/ttyACM0
@@ -40,7 +40,7 @@ responseDelay = 95
 ## to new peers.
 #default = true
 
-## Options: cul, cc1100, coc, hmcfglan, hmlgw
+## Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
 #deviceType = hmlgw
 
 ## IP address of your HM-LGW
@@ -87,7 +87,7 @@ responseDelay = 95
 ## to new peers.
 #default = true
 
-## Options: cul, cc1100, coc, hmcfglan, hmlgw
+## Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
 #deviceType = hmcfglan
 
 ## IP address of your HM-CFG-LAN
@@ -132,7 +132,7 @@ responseDelay = 95
 ## to new peers.
 #default = true
 
-## Options: cul, cc1100, coc, hmcfglan, hmlgw
+## Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
 ## Also use "coc" for SCC, CCD and CSM
 #deviceType = coc
 
@@ -157,6 +157,33 @@ responseDelay = 95
 # stackPosition = 0
 
 #######################################
+################ CUNO  ################
+#######################################
+
+## The device family this interface is for
+#[HomeMaticBidCoS]
+
+## Specify an unique id here to identify this device in Homegear
+#id = My-CUNO
+
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
+
+## Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
+#deviceType = cuno
+
+## IP address of your CUNO
+#host = 192.168.178.100
+
+## Port number your CUNO listens on. Normally 2323.
+#port = 2323
+
+## Default: responseDelay = 95
+## Should be "95" for CUNO
+#responseDelay = 95
+
+#######################################
 ########## TI CC1101 Module  ##########
 #######################################
 
@@ -170,7 +197,7 @@ responseDelay = 95
 ## to new peers.
 #default = true
 
-## Options: cul, cc1100, coc, hmcfglan, hmlgw
+## Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
 #deviceType = cc1100
 
 #device = /dev/spidev0.0
