--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -87,7 +87,9 @@ firmwarePath = /var/lib/homegear/firmware
 # redirectToSSHTunnel = 192.168.0.10
 # redirectToSSHTunnel = MyHostname
 
-#### Don't change settings below unless you know exactly what you're doing ####
+#### !!!Don't change settings below unless you know exactly what you're doing!!! ####
+#### !!!Don't change settings below unless you know exactly what you're doing!!! ####
+#### !!!Don't change settings below unless you know exactly what you're doing!!! ####
 
 # Default: prioritizeThreads = true
 prioritizeThreads = true
@@ -95,12 +97,18 @@ prioritizeThreads = true
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
 
+# Default: rpcServerMaxConnections = 50
+rpcServerMaxConnections = 50
+
 # Default: rpcServerThreadPriority = 0
 rpcServerThreadPriority = 0
 
 # Default: rpcServerThreadPolicy = SCHED_OTHER
 # Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
 rpcServerThreadPolicy = SCHED_OTHER
+
+# Default: rpcClientMaxThreads = 50
+rpcClientMaxThreads = 50
 
 # Default: rpcClientThreadPriority = 0
 rpcClientThreadPriority = 0
@@ -129,6 +137,9 @@ packetReceivedThreadPriority = 0
 # Default: packetReceivedThreadPolicy = SCHED_OTHER
 # Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
 packetReceivedThreadPolicy = SCHED_OTHER
+
+# Default: eventMaxThreads = 20
+eventMaxThreads = 20
 
 # Default: eventTriggerThreadPriority = 0
 eventTriggerThreadPriority = 0
