--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Homepage: https://homegear.eu
 
 Package: homegear
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsqlite3-0 (>= 3.7.13), libreadline6 (>= 6.2), adduser (>= 3.113), libgcrypt11 | libgcrypt20, libgnutlsxx27 | libgnutlsxx28, libgpg-error0 (>= 1.10), unzip (>= 6.0), p7zip-full (>= 9.0), libxml2-utils (>= 2.8.0), liblzo2-dev (>= 2.06), python-lzo (>= 1.08), perl (>= 5.14.2), patch (>= 2.6.1)
+Depends: ${shlibs:Depends}, ${misc:Depends}, libsqlite3-0 (>= 3.7.13), libreadline6 (>= 6.2), adduser (>= 3.113), libgcrypt11 | libgcrypt20, libgnutlsxx27 | libgnutlsxx28, libgpg-error0 (>= 1.10), unzip (>= 6.0), p7zip-full (>= 9.0), libxml2-utils (>= 2.8.0), liblzo2-dev (>= 2.06), python-lzo (>= 1.08), patch (>= 2.6.1)
 Description: Program to control your HomeMatic devices
  Homegear a program to interface your home automation software 
  with your HomeMatic devices.
