--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -91,74 +91,74 @@ diffieHellmanKeySize = 1024
 # Comma separated list of user names created with Homegear's CLI.
 validUsers = homegear
 
-[WebServer1]
+#[WebServer1]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: rpcInterface = ::
-interface = 0.0.0.0
+#interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
-port = 80
+#port = 80
 
 # Enable Homegear's rpc server on this port
 # Default: true
-rpcServer = false
+#rpcServer = false
 
 # Enable Homegear's build-in web server on this port
 # Default: false
-webServer = true
+#webServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-contentPath = /var/lib/homegear/www
+#contentPath = /var/lib/homegear/www
 
 # Set ssl to "true" to enable SSL support
-ssl = false
+#ssl = false
 
 # You can specify the HTTP authentication type your XML RPC event server
 # uses here.
 # Can be one of the following: none, basic
 # Default: authType = basic
-authType = none
+#authType = none
 
 # Redirect HTTP requests to this address
 # recdirectTo = https://myserver.com
 
-[WebServer2]
+#[WebServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
 # Default: rpcInterface = ::
-interface = 0.0.0.0
+#interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
-port = 443
+#port = 443
 
 # Enable Homegear's rpc server on this port
 # Default: true
-rpcServer = false
+#rpcServer = false
 
 # Enable Homegear's build-in web server on this port
 # Default: false
-webServer = true
+#webServer = true
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
-contentPath = /var/lib/homegear/www
+#contentPath = /var/lib/homegear/www
 
 # Set ssl to "true" to enable SSL support
-ssl = true
+#ssl = true
 
 # You can specify the HTTP authentication type your XML RPC event server
 # uses here.
 # Can be one of the following: none, basic
 # Default: authType = basic
-authType = none
+#authType = none
 
 # The size in bit of the temporary Diffie-Hellman parameters generated at start up.
 # This setting is ignored when Diffie-Hellman parameters are read from file.
 # Should be >= 1024 bit.
 # Default: diffieHellmanKeySize = 1024
-diffieHellmanKeySize = 1024
+#diffieHellmanKeySize = 1024
 
 # Comma separated list of user names created with Homegear's CLI.
-validUsers = homegear
+#validUsers = homegear
