--- a/.cproject
+++ b/.cproject
@@ -20,7 +20,7 @@
 					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.275614584." name="/" resourcePath="">
 						<toolChain errorParsers="" id="cdt.managedbuild.toolchain.gnu.exe.debug.782221185" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug">
 							<targetPlatform binaryParser="org.eclipse.cdt.core.ELF" id="cdt.managedbuild.target.gnu.platform.exe.debug.567955920" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.exe.debug"/>
-							<builder arguments="" autoBuildTarget="all" buildPath="${workspace_loc:/Homegear}" cleanBuildTarget="clean" command="/home/PREETZ/sathya/GitHub/makeHomegearRPIDebug.sh" enableAutoBuild="false" enableCleanBuild="true" enabledIncrementalBuild="true" id="cdt.managedbuild.builder.gnu.cross.177979262" incrementalBuildTarget="all" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" parallelBuildOn="false" superClass="cdt.managedbuild.builder.gnu.cross">
+							<builder autoBuildTarget="all" buildPath="${workspace_loc:/Homegear}" cleanBuildTarget="clean" command="make" enableAutoBuild="false" enableCleanBuild="true" enabledIncrementalBuild="true" id="cdt.managedbuild.builder.gnu.cross.177979262" incrementalBuildTarget="all" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Gnu Make Builder" parallelBuildOn="false" superClass="cdt.managedbuild.builder.gnu.cross">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name=""/>
 								</outputEntries>
@@ -119,9 +119,15 @@
 									<listOptionValue builtIn="false" value="BIDCOSTICC1101"/>
 									<listOptionValue builtIn="false" value="BIDCOSTICC1100"/>
 									<listOptionValue builtIn="false" value="BIDCOSCUL"/>
+									<listOptionValue builtIn="false" value="_GLIBCXX_USE_NANOSLEEP"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.include.paths.1056346228" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/include/c++/4.8"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/main"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/sapi"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/TSRM"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/Zend"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1073675196" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -130,9 +136,15 @@
 								<option id="gnu.c.compiler.exe.debug.option.debugging.level.1324059028" name="Debug Level" superClass="gnu.c.compiler.exe.debug.option.debugging.level" value="gnu.c.debugging.level.max" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.1979052756" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/include/c++/4.8"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/main"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/sapi"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/TSRM"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/Zend"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1670075670" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__GXX_EXPERIMENTAL_CXX0X__=1"/>
+									<listOptionValue builtIn="false" value="_GLIBCXX_USE_NANOSLEEP"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1181581060" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -154,6 +166,11 @@
 							<tool command="as" commandLinePattern="${COMMAND} ${FLAGS} ${OUTPUT_FLAG} ${OUTPUT_PREFIX}${OUTPUT} ${INPUTS}" errorParsers="org.eclipse.cdt.core.GASErrorParser" id="cdt.managedbuild.tool.gnu.assembler.exe.debug.1534907246" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug">
 								<option id="gnu.both.asm.option.include.paths.1149245389" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/include/c++/4.8"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/main"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/sapi"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/TSRM"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/Zend"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1463545320" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
@@ -272,6 +289,7 @@
 									<listOptionValue builtIn="false" value="__unix__=1"/>
 									<listOptionValue builtIn="false" value="__x86_64=1"/>
 									<listOptionValue builtIn="false" value="__x86_64__=1"/>
+									<listOptionValue builtIn="false" value="_GLIBCXX_USE_NANOSLEEP"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.include.paths.2065907104" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;W:\include&quot;"/>
@@ -282,6 +300,11 @@
 									<listOptionValue builtIn="false" value="&quot;W:\lib\gcc\x86_64-linux-gnu\4.7\include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;W:\lib\gcc\x86_64-linux-gnu\4.7\include-fixed&quot;"/>
 									<listOptionValue builtIn="false" value="/usr/include/c++/4.8"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/main"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/sapi"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/TSRM"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/Zend"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.852683577" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
@@ -294,9 +317,15 @@
 									<listOptionValue builtIn="false" value="&quot;W:\lib\gcc\x86_64-linux-gnu\4.7\include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;W:\lib\gcc\x86_64-linux-gnu\4.7\include-fixed&quot;"/>
 									<listOptionValue builtIn="false" value="/usr/include/c++/4.8"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/main"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/sapi"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/TSRM"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/Zend"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1308428511" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__GXX_EXPERIMENTAL_CXX0X__=1"/>
+									<listOptionValue builtIn="false" value="_GLIBCXX_USE_NANOSLEEP"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.2012490794" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -316,6 +345,11 @@
 							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.380417495" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release">
 								<option id="gnu.both.asm.option.include.paths.102057658" name="Include paths (-I)" superClass="gnu.both.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/include/c++/4.8"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/main"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/sapi"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/TSRM"/>
+									<listOptionValue builtIn="false" value="/var/lib/homegear/modules/php/include/php/Zend"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.assembler.input.1337759836" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 							</tool>
