--- a/debian/rules
+++ b/debian/rules
@@ -84,7 +84,7 @@ override_dh_auto_install:
 	chown root:root $(CURDIR)/debian/homegear/var/lib/homegear/DeviceTypePatch.patch
 	chmod 644 $(CURDIR)/debian/homegear/var/lib/homegear/DeviceTypePatch.patch
 	
-override_dh_shlibdeps
+override_dh_shlibdeps:
 	dh_shlibdeps -l/usr/lib/php5
 	
 %:
