--- a/debian/rules
+++ b/debian/rules
@@ -85,7 +85,7 @@ override_dh_auto_install:
 	chmod 644 $(CURDIR)/debian/homegear/var/lib/homegear/DeviceTypePatch.patch
 	
 override_dh_shlibdeps:
-	dh_shlibdeps -l/usr/lib/php5 -v
+	dh_shlibdeps -l/usr/lib/php5 --dpkg-shlibdeps-params=--ignore-missing-info
 	
 %:
 	dh $@
