--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -15,6 +15,10 @@ webServer = true
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
 
+# Enable Homegear's build-in WebSocket server on this port
+# Default: false
+webSocket = true
+
 # Set ssl to "true" to enable SSL support
 ssl = false
 
@@ -40,6 +44,10 @@ webServer = true
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
+
+# Enable Homegear's build-in WebSocket server on this port
+# Default: false
+webSocket = true
 
 # Set ssl to "true" to enable SSL support
 ssl = true
@@ -72,6 +80,10 @@ webServer = true
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
 contentPath = /var/lib/homegear/www/rpc
+
+# Enable Homegear's build-in WebSocket server on this port
+# Default: false
+webSocket = true
 
 # Set ssl to "true" to enable SSL support
 ssl = true
