--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "php-src"]
 	path = php-src
 	url = https://github.com/php/php-src
+[submodule "Libraries/UPnP/gupnp"]
+	path = Libraries/UPnP/gupnp
+	url = git://git.gnome.org/gupnp
