--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -24,6 +24,15 @@ databaseSynchronous = false;
 # Default: logfilePath = /var/log/homegear
 logfilePath = /var/log/homegear
 
+# Enable 
+# Default: enableUPnP = true
+enableUPnP = true;
+
+# Sets the IP address, the UPnP server listens on. By default auto discovery is used, but this might not work,
+# if multiple interfaces exist.
+# Default: uPnPIpAddress =
+# uPnPIpAddress = 
+
 #### SSL options ####
 # You can create a new certificate pair with:
 # openssl genrsa -out /etc/homegear/homegear.key 2048
