--- a/Miscellaneous/main.conf
+++ b/Miscellaneous/main.conf
@@ -65,6 +65,10 @@ clientSettingsPath = /etc/homegear/rpcclients.conf
 # Default: serverSettingsPath = /etc/homegear/rpcservers.conf
 serverSettingsPath = /etc/homegear/rpcservers.conf
 
+# Path to the MQTT settings file.
+# Default: mqttSettingsPath = /etc/homegear/mqtt.conf
+mqttSettingsPath = /etc/homegear/mqtt.conf
+
 # Path to the physical interface settings file.
 # Default: physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
 physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
