--- a/debian/rules
+++ b/debian/rules
@@ -25,6 +25,7 @@ override_dh_auto_install:
 	cp $(CURDIR)/Miscellaneous/main.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/rpcclients.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/rpcservers.conf $(CURDIR)/debian/homegear/etc/homegear
+	cp $(CURDIR)/Miscellaneous/mqtt.conf $(CURDIR)/debian/homegear/etc/homegear
 	cp $(CURDIR)/Miscellaneous/physicalinterfaces.conf $(CURDIR)/debian/homegear/etc/homegear
 	chmod 755 $(CURDIR)/debian/homegear/etc/homegear
 	chmod 644 $(CURDIR)/debian/homegear/etc/homegear/*
