--- a/Miscellaneous/rpcservers.conf
+++ b/Miscellaneous/rpcservers.conf
@@ -7,6 +7,14 @@ interface = 0.0.0.0
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2001
 
+# Enable Homegear's XML-RPC and binary RPC server on this port. 
+# Default: true
+xmlrpcServer = true
+
+# Enable Homegear's JSON-RPC server on this port. 
+# Default: true
+jsonrpcServer = true
+
 # Enable Homegear's build-in web server on this port
 # Default: false
 webServer = true
@@ -36,6 +44,14 @@ interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2002
+
+# Enable Homegear's XML-RPC and binary RPC server on this port. 
+# Default: true
+xmlrpcServer = true
+
+# Enable Homegear's JSON-RPC server on this port. 
+# Default: true
+jsonrpcServer = true
 
 # Enable Homegear's build-in web server on this port
 # Default: false
@@ -72,6 +88,14 @@ interface = 0.0.0.0
 
 # The port number to bind the RPC server to. This setting is mandatory.
 port = 2003
+
+# Enable Homegear's XML-RPC and binary RPC server on this port. 
+# Default: true
+xmlrpcServer = true
+
+# Enable Homegear's JSON-RPC server on this port. 
+# Default: true
+jsonrpcServer = true
 
 # Enable Homegear's build-in web server on this port
 # Default: false
