--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Libraries/MQTT/paho.mqtt.c"]
 	path = Libraries/MQTT/paho.mqtt.c
-	url = https://github.com/eclipse/paho.mqtt.c
+	url = https://github.com/Homegear/paho.mqtt.c
